--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -3,7 +3,8 @@ as a model from MS1 and database files. These create tables and allow you to
 get and post information to the database tables. 
 
 In order to use current version make sure to first run "dune build main.exe" in 
-terminal (in the 3110Project folder) to compile all necessary files. After that 
+terminal (in the 3110Project folder) to compile all necessary files. If 
+dependencies are required, please install them with OPAM. After that 
 run "dune exec ./main.exe" to run a server on localhost to use any functionality 
 that would involve creating/getting users, groups, restrictions, and friends. 
 We use the app Postman to model these changes (making get/post requests to 
